--- a/OnTheMap/View/Base.lproj/LaunchScreen.storyboard
+++ b/OnTheMap/View/Base.lproj/LaunchScreen.storyboard
@@ -18,7 +18,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="udacity" translatesAutoresizingMaskIntoConstraints="NO" id="qVO-jm-6wI" userLabel="Logo">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="image_udacity_white" translatesAutoresizingMaskIntoConstraints="NO" id="qVO-jm-6wI" userLabel="Logo">
                                 <rect key="frame" x="87" y="385" width="240" height="126"/>
                             </imageView>
                         </subviews>
@@ -36,6 +36,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="udacity" width="240" height="126"/>
+        <image name="image_udacity_white" width="240" height="126"/>
     </resources>
 </document>
